# KarlKast

./: AudioRecorder.cpp  AudioRecorder.h  AudioRoute.h  CMakeLists.txt  Client.cpp  Client.h  ClientRepository.cpp  ClientRepository.h  CrowApp.h  README.md  main.cpp
alarm/: AlarmRepository.cpp  AlarmRepository.h
audio/: AudioDsp.cpp  AudioDsp.h  AudioFilter.cpp  AudioFilter.h  AudioFilterParams.h  AudioFilterType.h  AudioRepository.cpp  AudioRepository.h  AudioUtil.cpp  AudioUtil.h  Biquad.cpp  Biquad.h  TimeDomainFeatures.h
console/: ConsoleUi.cpp  ConsoleUi.h
settings/: OctaveBands.h  SettingsRepository.cpp  SettingsRepository.h  SettingsRoute.cpp  SettingsRoute.h
webapp/audio_test/audio_test/: README.md  pubspec.yaml
webapp/audio_test/audio_test/web/: index.html
webapp/karl_kast/: README.md  pubspec.yaml
webapp/karl_kast/lib/: audio_binding.dart  audio_controller.dart  audio_page.dart  audio_service.dart  main.dart
webapp/karl_kast/lib/audio/: audio_gauge.dart  audio_level_controller.dart  audio_level_widget.dart  audio_util.dart
webapp/karl_kast/lib/common/: constants.dart  iso_octave_bands.dart  value_unit_widget.dart
webapp/karl_kast/lib/settings/: setting.dart  settings_controller.dart  settings_page.dart  settings_provider.dart
webapp/karl_kast/web/: index.html  manifest.json
